{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 44,
  "lineage": "6fb61002-67c9-79fc-e4b6-12519bf317c3",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845573458351:security-group/sg-0770591d2e143751d",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0770591d2e143751d",
            "ingress": [],
            "name": "day20-eks-cluster-sg-20260322195058982800000005",
            "name_prefix": "day20-eks-cluster-sg-",
            "owner_id": "845573458351",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "day20-eks-cluster-sg",
              "Project": "EKS-Day20",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "day20-eks-cluster-sg",
              "Project": "EKS-Day20",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b681d98e0cb7c51c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "845573458351",
            "id": "sg-0770591d2e143751d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.node_group",
            "module.iam.aws_iam_role_policy_attachment.cluster_policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_vpc_resource_controller",
            "module.iam.aws_iam_role_policy_attachment.node_cni_policy",
            "module.iam.aws_iam_role_policy_attachment.node_registry_policy",
            "module.iam.aws_iam_role_policy_attachment.node_worker_policy",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845573458351:security-group/sg-036849a0cd509a148",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036849a0cd509a148",
            "ingress": [],
            "name": "day20-eks-node-sg-20260322195059146800000006",
            "name_prefix": "day20-eks-node-sg-",
            "owner_id": "845573458351",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "day20-eks-node-sg",
              "Project": "EKS-Day20",
              "Terraform": "true",
              "kubernetes.io/cluster/day20-eks": "owned"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "day20-eks-node-sg",
              "Project": "EKS-Day20",
              "Terraform": "true",
              "kubernetes.io/cluster/day20-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b681d98e0cb7c51c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "845573458351",
            "id": "sg-036849a0cd509a148",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.node_group",
            "module.iam.aws_iam_role_policy_attachment.cluster_policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_vpc_resource_controller",
            "module.iam.aws_iam_role_policy_attachment.node_cni_policy",
            "module.iam.aws_iam_role_policy_attachment.node_registry_policy",
            "module.iam.aws_iam_role_policy_attachment.node_worker_policy",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_to_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster control plane to communicate with nodes",
            "from_port": 1025,
            "id": "sgrule-376725446",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-036849a0cd509a148",
            "security_group_rule_id": "sgr-04b67410f9a8895f7",
            "self": false,
            "source_security_group_id": "sg-0770591d2e143751d",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.node_group",
            "module.iam.aws_iam_role_policy_attachment.cluster_policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_vpc_resource_controller",
            "module.iam.aws_iam_role_policy_attachment.node_cni_policy",
            "module.iam.aws_iam_role_policy_attachment.node_registry_policy",
            "module.iam.aws_iam_role_policy_attachment.node_worker_policy",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_to_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with cluster API",
            "from_port": 443,
            "id": "sgrule-2642879491",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0770591d2e143751d",
            "security_group_rule_id": "sgr-0e832b18f996f534c",
            "self": false,
            "source_security_group_id": "sg-036849a0cd509a148",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.node_group",
            "module.iam.aws_iam_role_policy_attachment.cluster_policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_vpc_resource_controller",
            "module.iam.aws_iam_role_policy_attachment.node_cni_policy",
            "module.iam.aws_iam_role_policy_attachment.node_registry_policy",
            "module.iam.aws_iam_role_policy_attachment.node_worker_policy",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_to_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1279663936",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-036849a0cd509a148",
            "security_group_rule_id": "sgr-064c2f7ee354e2797",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.node",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.node_group",
            "module.iam.aws_iam_role_policy_attachment.cluster_policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_vpc_resource_controller",
            "module.iam.aws_iam_role_policy_attachment.node_cni_policy",
            "module.iam.aws_iam_role_policy_attachment.node_registry_policy",
            "module.iam.aws_iam_role_policy_attachment.node_worker_policy",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b5055239bfccf9ab",
            "arn": "arn:aws:ec2:us-east-1:845573458351:elastic-ip/eipalloc-0b5055239bfccf9ab",
            "domain": "vpc",
            "id": "eipalloc-0b5055239bfccf9ab",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-225-25-107.compute-1.amazonaws.com",
            "public_ip": "3.225.25.107",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "day20-eks-nat-eip-1",
              "Project": "EKS-Day20",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "day20-eks-nat-eip-1",
              "Project": "EKS-Day20",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845573458351:internet-gateway/igw-02988f66b6fbb5aec",
            "id": "igw-02988f66b6fbb5aec",
            "owner_id": "845573458351",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "day20-eks-igw",
              "Project": "EKS-Day20",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "day20-eks-igw",
              "Project": "EKS-Day20",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b681d98e0cb7c51c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b5055239bfccf9ab",
            "association_id": "eipassoc-0db27eaf1610f4c97",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-02aa5ca98b8aafedd",
            "network_interface_id": "eni-090989fed6b1a84ea",
            "private_ip": "10.0.101.54",
            "public_ip": "3.225.25.107",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06e56c092fadbe65b",
            "tags": {
              "Environment": "development",
              "Name": "day20-eks-nat-1",
              "Project": "EKS-Day20",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "day20-eks-nat-1",
              "Project": "EKS-Day20",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b681d98e0cb7c51c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-032932c36eb9e904d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02aa5ca98b8aafedd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-032932c36eb9e904d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "845573458351",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-032932c36eb9e904d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02988f66b6fbb5aec",
            "id": "r-rtb-0a42573acd1832b651080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0a42573acd1832b65",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "845573458351",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0a42573acd1832b65"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845573458351:route-table/rtb-032932c36eb9e904d",
            "id": "rtb-032932c36eb9e904d",
            "owner_id": "845573458351",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "day20-eks-private-rt-1",
              "Project": "EKS-Day20",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "day20-eks-private-rt-1",
              "Project": "EKS-Day20",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b681d98e0cb7c51c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "845573458351",
            "id": "rtb-032932c36eb9e904d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845573458351:route-table/rtb-0a42573acd1832b65",
            "id": "rtb-0a42573acd1832b65",
            "owner_id": "845573458351",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "day20-eks-public-rt",
              "Project": "EKS-Day20",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "day20-eks-public-rt",
              "Project": "EKS-Day20",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b681d98e0cb7c51c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "845573458351",
            "id": "rtb-0a42573acd1832b65",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b472efad34c783d6",
            "region": "us-east-1",
            "route_table_id": "rtb-032932c36eb9e904d",
            "subnet_id": "subnet-0ab3f70b6d9d63919"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2a7b73adee50212",
            "region": "us-east-1",
            "route_table_id": "rtb-032932c36eb9e904d",
            "subnet_id": "subnet-02530385370d59e9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074e4635006eecbf9",
            "region": "us-east-1",
            "route_table_id": "rtb-032932c36eb9e904d",
            "subnet_id": "subnet-0be9ef4340f007259"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c141ccadee5f959d",
            "region": "us-east-1",
            "route_table_id": "rtb-0a42573acd1832b65",
            "subnet_id": "subnet-06e56c092fadbe65b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff7eb23bd304bb3b",
            "region": "us-east-1",
            "route_table_id": "rtb-0a42573acd1832b65",
            "subnet_id": "subnet-0c1f0ce3c765540b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3b80d46a60da33f",
            "region": "us-east-1",
            "route_table_id": "rtb-0a42573acd1832b65",
            "subnet_id": "subnet-082d54262d8339447"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845573458351:subnet/subnet-0ab3f70b6d9d63919",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab3f70b6d9d63919",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "845573458351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "day20-eks-private-us-east-1a",
              "Project": "EKS-Day20",
              "Terraform": "true",
              "Type": "private",
              "kubernetes.io/cluster/day20-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "day20-eks-private-us-east-1a",
              "Project": "EKS-Day20",
              "Terraform": "true",
              "Type": "private",
              "kubernetes.io/cluster/day20-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b681d98e0cb7c51c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "845573458351",
            "id": "subnet-0ab3f70b6d9d63919",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845573458351:subnet/subnet-02530385370d59e9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02530385370d59e9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "845573458351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "day20-eks-private-us-east-1b",
              "Project": "EKS-Day20",
              "Terraform": "true",
              "Type": "private",
              "kubernetes.io/cluster/day20-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "day20-eks-private-us-east-1b",
              "Project": "EKS-Day20",
              "Terraform": "true",
              "Type": "private",
              "kubernetes.io/cluster/day20-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b681d98e0cb7c51c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "845573458351",
            "id": "subnet-02530385370d59e9e",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845573458351:subnet/subnet-0be9ef4340f007259",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be9ef4340f007259",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "845573458351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "day20-eks-private-us-east-1c",
              "Project": "EKS-Day20",
              "Terraform": "true",
              "Type": "private",
              "kubernetes.io/cluster/day20-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "day20-eks-private-us-east-1c",
              "Project": "EKS-Day20",
              "Terraform": "true",
              "Type": "private",
              "kubernetes.io/cluster/day20-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b681d98e0cb7c51c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "845573458351",
            "id": "subnet-0be9ef4340f007259",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845573458351:subnet/subnet-06e56c092fadbe65b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e56c092fadbe65b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "845573458351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "day20-eks-public-us-east-1a",
              "Project": "EKS-Day20",
              "Terraform": "true",
              "Type": "public",
              "kubernetes.io/cluster/day20-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "day20-eks-public-us-east-1a",
              "Project": "EKS-Day20",
              "Terraform": "true",
              "Type": "public",
              "kubernetes.io/cluster/day20-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b681d98e0cb7c51c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "845573458351",
            "id": "subnet-06e56c092fadbe65b",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845573458351:subnet/subnet-0c1f0ce3c765540b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1f0ce3c765540b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "845573458351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "day20-eks-public-us-east-1b",
              "Project": "EKS-Day20",
              "Terraform": "true",
              "Type": "public",
              "kubernetes.io/cluster/day20-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "day20-eks-public-us-east-1b",
              "Project": "EKS-Day20",
              "Terraform": "true",
              "Type": "public",
              "kubernetes.io/cluster/day20-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b681d98e0cb7c51c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "845573458351",
            "id": "subnet-0c1f0ce3c765540b2",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845573458351:subnet/subnet-082d54262d8339447",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082d54262d8339447",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "845573458351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "day20-eks-public-us-east-1c",
              "Project": "EKS-Day20",
              "Terraform": "true",
              "Type": "public",
              "kubernetes.io/cluster/day20-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "day20-eks-public-us-east-1c",
              "Project": "EKS-Day20",
              "Terraform": "true",
              "Type": "public",
              "kubernetes.io/cluster/day20-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b681d98e0cb7c51c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "845573458351",
            "id": "subnet-082d54262d8339447",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845573458351:vpc/vpc-0b681d98e0cb7c51c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069be8f0290601dd4",
            "default_route_table_id": "rtb-053eace74b6f0957f",
            "default_security_group_id": "sg-048d460ef90615dff",
            "dhcp_options_id": "dopt-0ab56fb04f4f5f99a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b681d98e0cb7c51c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053eace74b6f0957f",
            "owner_id": "845573458351",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Name": "day20-eks-vpc",
              "Project": "EKS-Day20",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "day20-eks-vpc",
              "Project": "EKS-Day20",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "845573458351",
            "id": "vpc-0b681d98e0cb7c51c",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}